--- a/assets/ejs/schedule.ejs
+++ b/assets/ejs/schedule.ejs
@@ -41,7 +41,7 @@
             <td></td>
             <td class="smaller syllabus-item-objective">
                 <% if (currentItem.objectives) { %>
-                    <b> {{< fa bullseye >}} Learning Objectives </b><br>
+                    <b>  Learning Objectives </b><br>
                     <% for (obj of currentItem.objectives) { %>
                             <%= obj %> <br> 
                     <% } %>  
@@ -49,13 +49,13 @@
             </td>
             <td class="smaller syllabus-item-assignment">
                 <% if (currentItem.prep) { %>
-                    <b>{{< fa dumbbell >}} Prep</b><br>
+                    <b> Prep</b><br>
                     <%= currentItem.prep %>
                 <% } %>     
             </td>
             <td class="smaller syllabus-item-assignment">
                 <% if (currentItem.activities) { %>
-                    <b>{{< fa users >}} In Class</b><br>
+                    <b> In Class</b><br>
                     <% for (activity of currentItem.activities) { %>
                         <%= activity %> <br> 
                 <% } %>  
@@ -63,7 +63,7 @@
             </td>
             <td class="smaller syllabus-item-assignment">
                 <% if (currentItem.due) { %>
-                    <b>{{< fa calendar >}} Due</b><br>
+                    <b>Due</b><br>
                     <%= currentItem.due %>
                 <% } %>     
             </td>
