--- a/assets/css/reveal-style/colors-fonts/simple.scss
+++ b/assets/css/reveal-style/colors-fonts/simple.scss
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+
 
 /*-- scss:defaults --*/
 
@@ -6,16 +8,14 @@ $bg-main0: #ffffff;
 $color-main0: #000;
 $bg-main1: #EF476F;
 $bg-main2: #23395B;
-$bg-main3: #FFD447;
 $color-main1: #fff;
 $color-main2: #fff;
-$color-main3: #fff;
-$alert-color: #FFD447;
-$alert-color-2: #59C9A5;
-$alert-color-3: #FFD447;
-$alert-color-4: #e56d89;
-$alert-color-5: #23395B;
-$background-color: #000000;
+$alert-color: #ffc400;
+$alert-color-2: #00c486;
+$alert-color-3: #23395B;
+$alert-color-4: #e70b3e;
+$background-color: #ffffff;
+
 // $link-color: #42affa;
 
 /*-- scss:rules --*/
@@ -45,26 +45,7 @@ $background-color: #000000;
     color: $color-main2; 
 }
 
-.bg3 {
-    background-color: $bg-main3;
-    color: $color-main3; 
-}
 
-.bg0 h1 {
-    color: $color-main0;
-}
-
-.bg0 h2 {
-    color: $color-main0;
-}
-
-.bg0 h3 {
-    color: $color-main0;
-}
-
-.bg0 h4 {
-    color: $color-main0;
-}
 
 
 .column.bg1 h1 { 
@@ -89,6 +70,10 @@ $background-color: #000000;
 
 .column.bg1 h6 {
     color: $color-main1; 
+}
+
+.column.bg1 p {
+    color: $bg-main0 !important ; 
 }
 
 .column.bg0 h1 { 
@@ -130,10 +115,6 @@ $background-color: #000000;
     color: $alert-color-3;
 }
 
-.alert-4 { 
-    color: $bg-main1;
-}
-
 .bg2 .alert {
     color: $alert-color;
 }
@@ -146,35 +127,23 @@ $background-color: #000000;
     color: $alert-color-2;
 }
 
-.bg1 .alert-3 {
-    color: $alert-color-5;
-}
-
-.bg3 .alert {
-    color: $bg-main1;
-}
-
-.bg3 .alert-2 {
-    color: $alert-color-4;
-}
-
-.bg3 .alert-3 {
-    color: $alert-color-2;
-}
-
-.bg3 .alert-4 {
-    color: $bg-main2;
-}
-
 .bg0 .alert {
-    color: $alert-color-3;
+    color: $alert-color;
 }
 
 .bg0 .alert-3 {
-    color: $bg-main1;
+    color: $alert-color-2;
 }
 
 .bg0 .alert-2 {
+    color: $alert-color-4;
+}
+
+.bg0 .highlight {
+    color: $alert-color;
+}
+
+.bg0 .highlight-2 {
     color: $alert-color-2;
 }
 
@@ -212,13 +181,13 @@ $background-color: #000000;
 
 
 
-.reveal h1, .reveal h2, .reveal h3 { 
-    font-family: 'Source Sans Pro', sans-serif;
+.reveal h1, .reveal h2, .reveal h3 .reveal h4 .reveal h5 { 
+    font-family: 'Fira Sans', sans-serif;
 }
 
 
 .reveal p { 
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.4rem;
     margin-left: 2rem;
     margin-right: 2rem;
@@ -226,7 +195,7 @@ $background-color: #000000;
 
 
 .reveal li { 
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.4rem;
 }
 
@@ -254,5 +223,10 @@ section.has-dark-background a, section.has-dark-background a:hover {
 }
 
 .fade { 
-    opacity: 0.5;
-}
+    opacity: 1;
+}  
+
+
+.bg0 {
+    color: $color-main0;
+} 
